[package]
name = "rust-structopt"
description = "simple structopt examples"
version = "0.1.0"
authors = ["Tarnyko <Tarnyko <tarnyko@tarnyko.net>>"]
license = "MIT"
repository = "https://github.com/Tarnyko/rust-structopt"
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
structopt = { version = "0.3.20" }
